# libgrading

./: .dockerignore  .gitignore  .gitmodules  .ycm_extra_conf.py  Arguments_8cpp.html  Arguments_8cpp__incl.map  Arguments_8cpp__incl.md5  Arguments_8cpp_source.html  CMakeLists.txt  Dockerfile  Dockerfile.base  Formatter_8cpp.html  Formatter_8cpp__incl.map  Formatter_8cpp__incl.md5  Formatter_8cpp_source.html  GNUmakefile  Info.plist  Makefile  Nodes.xml  README.md  README_8md_source.html  TestBuilder_8cpp.html  TestBuilder_8cpp__incl.map  TestBuilder_8cpp__incl.md5  TestBuilder_8cpp_source.html  TestExitStatus_8cpp.html  TestExitStatus_8cpp__incl.map  TestExitStatus_8cpp_source.html  TestResult_8cpp.html  TestResult_8cpp__incl.map  TestResult_8cpp_source.html  TestSuite_8cpp.html  TestSuite_8cpp__incl.map  TestSuite_8cpp__incl.md5  TestSuite_8cpp_source.html  Test_8cpp.html  Test_8cpp__incl.map  Test_8cpp_source.html  Tokens.xml  _arguments_8cpp.html  (+369 more)
artwork/: CREDIT.md
debian/: changelog  control  copyright  libgrading-dev.install  libgrading0.install
doc/: CMakeLists.txt  Doxyfile.in
docker/: Makefile
docker/libgrading/: Dockerfile
git-hooks/: install  post-checkout
include/: CMakeLists.txt  libgrading.h
search/: all_0.js  all_1.js  all_10.js  all_11.js  all_14.js  all_2.js  all_3.js  all_4.js  all_5.js  all_6.js  all_7.js  all_8.js  all_9.js  all_a.js  all_b.js  all_c.js  all_d.js  all_e.js  all_f.js  classes_0.js  classes_1.js  classes_2.js  classes_3.js  classes_4.js  classes_5.js  enums_0.js  enums_1.js  enumvalues_0.js  enumvalues_1.js  enumvalues_2.js  enumvalues_3.js  enumvalues_4.js  enumvalues_5.js  enumvalues_6.js  enumvalues_7.js  enumvalues_8.js  enumvalues_9.js  enumvalues_a.js  files_0.js  files_2.js  (+32 more)
src/: Arguments.cpp  CMakeLists.txt  Formatter.cpp  Test.cpp  TestBuilder.cpp  TestExitStatus.cpp  TestResult.cpp  TestSuite.cpp  checks.cpp  posix.cpp  private.h  strategy.cpp
test/: CMakeLists.txt  gradescope.cpp  skip.cpp  test.cpp
